--- a/files/.config/Code/User/settings.json
+++ b/files/.config/Code/User/settings.json
@@ -1,32 +1,41 @@
 {
-    "editor.fontFamily": "'JetBrainsMono Nerd Font'",
-    "editor.renderWhitespace": "none",
+    "breadcrumbs.symbolPath": "off",
+    "css.lint.duplicateProperties": "warning",
+    "css.lint.important": "warning",
+    "debug.console.wordWrap": false,
+    "debug.inlineValues": true,
+    "diffEditor.ignoreTrimWhitespace": false,
     "editor.autoClosingBrackets": "always",
     "editor.autoClosingOvertype": "always",
     "editor.autoClosingQuotes": "always",
+    "editor.cursorSmoothCaretAnimation": true,
     "editor.detectIndentation": false,
     "editor.dragAndDrop": false,
     "editor.emptySelectionClipboard": false,
+    "editor.fontFamily": "'JetBrainsMono Nerd Font'",
+    "editor.fontLigatures": true,
+    "editor.formatOnPaste": true,
+    "editor.lineNumbers": "relative",
     "editor.linkedEditing": true,
+    "editor.minimap.enabled": false,
+    "editor.quickSuggestions": true,
     "editor.renderLineHighlight": "none",
+    "editor.renderWhitespace": "none",
     "editor.rulers": [
         80
     ],
     "editor.smoothScrolling": true,
-    "editor.tabCompletion": "on",
-    "editor.cursorBlinking": "expand",
-    "editor.cursorSmoothCaretAnimation": true,
-    "editor.fontLigatures": true,
-    "editor.formatOnPaste": true,
-    "diffEditor.ignoreTrimWhitespace": false,
-    "editor.minimap.enabled": false,
-    "editor.quickSuggestions": true,
     "editor.suggestSelection": "recentlyUsedByPrefix",
+    "editor.tabCompletion": "on",
     "editor.wordBasedSuggestionsMode": "allDocuments",
+    "emmet.triggerExpansionOnTab": true,
+    "explorer.compactFolders": false,
+    "extensions.closeExtensionDetailsOnViewChange": true,
+    "extensions.ignoreRecommendations": true,
     "files.defaultLanguage": "markdown",
     "files.enableTrash": false,
-    "files.trimTrailingWhitespace": true,
     "files.trimFinalNewlines": true,
+    "files.trimTrailingWhitespace": true,
     "files.watcherExclude": {
         "**/.git/objects/**": true,
         "**/.git/subtree-cache/**": true,
@@ -34,55 +43,152 @@
         "**/.hg/store/**": true,
         "**/venv/**": true,
     },
-    "workbench.commandPalette.history": 100,
-    "workbench.list.smoothScrolling": true,
-    "workbench.panel.opensMaximized": "always",
-    "material-icon-theme.showWelcomeMessage": false,
-    "workbench.startupEditor": "none",
-    "workbench.colorTheme": "Overflow Contrast (rainglow)",
-    "workbench.tips.enabled": false,
-    "workbench.view.alwaysShowHeaderActions": true,
-    "workbench.tree.renderIndentGuides": "always",
-    "breadcrumbs.symbolPath": "off",
-    "workbench.editor.closeOnFileDelete": true,
-    "workbench.editor.enablePreview": false,
-    "workbench.iconTheme": "material-icon-theme",
-    "zenMode.centerLayout": false,
-    "zenMode.hideLineNumbers": false,
-    "zenMode.hideStatusBar": false,
-    "zenMode.hideTabs": false,
-    "zenMode.restore": false,
-    "window.customMenuBarAltFocus": false,
-    "window.enableMenuBarMnemonics": false,
-    "explorer.compactFolders": false,
-    "search.exclude": {
-        "**/venv": true
-    },
-    "search.searchEditor.doubleClickBehaviour": "openLocationToSide",
-    "search.showLineNumbers": true,
-    "search.smartCase": true,
-    "search.useIgnoreFiles": false,
-    "debug.console.wordWrap": false,
-    "debug.inlineValues": true,
-    "extensions.closeExtensionDetailsOnViewChange": true,
-    "extensions.ignoreRecommendations": true,
-    "terminal.explorerKind": "external",
-    "terminal.external.linuxExec": "kitty",
-    "terminal.integrated.allowChords": false,
-    "terminal.integrated.cursorBlinking": true,
-    "terminal.integrated.sendKeybindingsToShell": true,
-    "terminal.integrated.showExitAlert": false,
-    "problems.showCurrentInStatus": true,
-    "telemetry.enableCrashReporter": false,
-    "telemetry.enableTelemetry": false,
-    "css.lint.duplicateProperties": "warning",
-    "css.lint.important": "warning",
-    "emmet.triggerExpansionOnTab": true,
     "git.untrackedChanges": "separate",
     "html.format.templating": true,
     "less.lint.duplicateProperties": "warning",
     "less.lint.important": "warning",
     "markdown.links.openLocation": "beside",
+    "material-icon-theme.showWelcomeMessage": false,
+    "problems.showCurrentInStatus": true,
     "scss.lint.duplicateProperties": "warning",
-    "scss.lint.important": "warning"
+    "scss.lint.important": "warning",
+    "search.exclude": {
+        "**/venv": true
+    },
+    "search.showLineNumbers": true,
+    "search.smartCase": true,
+    "search.useIgnoreFiles": false,
+    "telemetry.enableCrashReporter": false,
+    "telemetry.enableTelemetry": false,
+    "terminal.explorerKind": "external",
+    "terminal.external.linuxExec": "kitty",
+    "terminal.integrated.cursorBlinking": true,
+    "terminal.integrated.showExitAlert": false,
+    "vim.highlightedyank.duration": 500,
+    "vim.highlightedyank.enable": true,
+    "vim.hlsearch": true,
+    "vim.incsearch": true,
+    "vim.insertModeKeyBindings": [
+        {
+            "before": [
+                "j",
+                "j"
+            ],
+            "after": [
+                "<ESC>"
+            ]
+        }
+    ],
+    "vim.leader": "<space>",
+    "vim.normalModeKeyBindingsNonRecursive": [
+        {
+            "before": [
+                "<leader>",
+                "f"
+            ],
+            "commands": [
+                "editor.action.formatDocument"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "s"
+            ],
+            "commands": [
+                "workbench.action.findInFiles"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "S"
+            ],
+            "commands": [
+                "search.action.openEditor"
+            ]
+        },
+        {
+            "before": [
+                "<c-n>",
+            ],
+            "commands": [
+                "workbench.action.toggleSidebarVisibility"
+            ]
+        },
+        {
+            "before": [
+                "Y"
+            ],
+            "after": [
+                "y",
+                "$"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "<leader>"
+            ],
+            "commands": [
+                ":noh"
+            ]
+        },
+        {
+            "before": [
+                "<c-h>"
+            ],
+            "after": [
+                "<c-w>",
+                "h"
+            ]
+        },
+        {
+            "before": [
+                "<c-l>"
+            ],
+            "after": [
+                "<c-w>",
+                "l"
+            ]
+        },
+        {
+            "before": [
+                "<c-j>"
+            ],
+            "after": [
+                "<c-w>",
+                "j"
+            ]
+        },
+        {
+            "before": [
+                "<c-k>"
+            ],
+            "after": [
+                "<c-w>",
+                "k"
+            ]
+        }
+    ],
+    "vim.useSystemClipboard": true,
+    "window.customMenuBarAltFocus": false,
+    "window.enableMenuBarMnemonics": false,
+    "workbench.colorTheme": "Overflow Contrast (rainglow)",
+    "workbench.commandPalette.history": 100,
+    "workbench.editor.closeOnFileDelete": true,
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.list.smoothScrolling": true,
+    "workbench.panel.opensMaximized": "always",
+    "workbench.startupEditor": "none",
+    "workbench.tips.enabled": false,
+    "workbench.tree.renderIndentGuides": "always",
+    "workbench.view.alwaysShowHeaderActions": true,
+    "zenMode.centerLayout": false,
+    "zenMode.hideLineNumbers": false,
+    "zenMode.hideStatusBar": false,
+    "zenMode.hideTabs": false,
+    "zenMode.restore": false,
+    "vim.visualstar": true,
+    "terminal.integrated.allowChords": false,
 }
