--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -1156,42 +1156,42 @@ map ctrl+0 change_font_size all 0
 
 # Gruvbox theme (dark) --------------------------------------------------------
 
-foreground            #ebdbb2
-background            #1d2021
-selection_foreground  #1d2021
-selection_background  #ebdbb2
+# foreground            #ebdbb2
+# background            #1d2021
+# selection_foreground  #1d2021
+# selection_background  #ebdbb2
 
-# black
-color0   #282828
-color8   #928374
+# # black
+# color0   #282828
+# color8   #928374
 
-# red
-color1   #cc241d
-color9   #fb4934
+# # red
+# color1   #cc241d
+# color9   #fb4934
 
-# green
-color2   #98971a
-color10  #b8bb26
+# # green
+# color2   #98971a
+# color10  #b8bb26
 
-# yellow
-color3   #d79921
-color11  #fabd2f
+# # yellow
+# color3   #d79921
+# color11  #fabd2f
 
-# blue
-color4  #458588
-color12 #83a598
+# # blue
+# color4  #458588
+# color12 #83a598
 
-# magenta
-color5   #b16286
-color13  #d3869b
+# # magenta
+# color5   #b16286
+# color13  #d3869b
 
-# cyan
-color6   #689d6a
-color14  #8ec07c
+# # cyan
+# color6   #689d6a
+# color14  #8ec07c
 
-# white
-color7   #a89984
-color15  #ebdbb2
+# # white
+# color7   #a89984
+# color15  #ebdbb2
 
 # Gruvbox theme (light) -------------------------------------------------------
 
@@ -1270,3 +1270,42 @@ color15  #ebdbb2
 # # white
 # color7   #65737e
 # color15  #adb5c0
+
+# Solarflare (base 16) theme --------------------------------------------------
+
+foreground            #a6afb8
+background            #18262f
+selection_foreground  #a6afb8
+selection_background  #18262f
+
+# black
+color0   #18262f
+color8   #667581
+
+# red
+color1   #ef5253
+color9   #ef5253
+
+# green
+color2   #7cc844
+color10  #7cc844
+
+# yellow
+color3   #e4b51c
+color11  #e4b51c
+
+# blue
+color4   #33b5e1
+color12  #33b5e1
+
+# magenta
+color5   #a363d5
+color13  #a363d5
+
+# cyan
+color6   #52cbb0
+color14  #52cbb0
+
+# white
+color7   #a6afb8
+color15  #f5f7fa
