--- a/files/.config/Code/User/settings.json
+++ b/files/.config/Code/User/settings.json
@@ -8,7 +8,6 @@
     "editor.autoClosingBrackets": "always",
     "editor.autoClosingOvertype": "always",
     "editor.autoClosingQuotes": "always",
-    "editor.cursorSmoothCaretAnimation": true,
     "editor.detectIndentation": false,
     "editor.dragAndDrop": false,
     "editor.emptySelectionClipboard": false,
@@ -20,12 +19,10 @@
     "editor.minimap.enabled": false,
     "editor.quickSuggestions": true,
     "editor.renderLineHighlight": "none",
-    "editor.renderWhitespace": "none",
     "editor.rulers": [
         80
     ],
     "editor.semanticHighlighting.enabled": false,
-    "editor.smoothScrolling": true,
     "editor.suggestSelection": "recentlyUsedByPrefix",
     "editor.tabCompletion": "on",
     "editor.wordBasedSuggestionsMode": "allDocuments",
@@ -57,18 +54,19 @@
     "scss.lint.duplicateProperties": "warning",
     "scss.lint.important": "warning",
     "search.exclude": {
-        "**/venv": true
+        "**/venv": true,
+        "**/node_modules/**": true,
     },
     "search.showLineNumbers": true,
     "search.smartCase": true,
     "search.useIgnoreFiles": false,
-    "tabnine.experimentalAutoImports": true,
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
     "terminal.explorerKind": "external",
     "terminal.external.linuxExec": "kitty",
     "terminal.integrated.allowChords": false,
     "terminal.integrated.cursorBlinking": true,
+    "terminal.integrated.rendererType": "canvas",
     "terminal.integrated.showExitAlert": false,
     "vim.highlightedyank.duration": 500,
     "vim.highlightedyank.enable": true,
@@ -185,7 +183,6 @@
     "workbench.commandPalette.history": 100,
     "workbench.editor.closeOnFileDelete": true,
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.list.smoothScrolling": true,
     "workbench.panel.opensMaximized": "always",
     "workbench.startupEditor": "none",
     "workbench.tips.enabled": false,
