CHANGE: VSCode theme

--- a/files/.config/Code/User/settings.json
+++ b/files/.config/Code/User/settings.json
@@ -123,7 +123,7 @@
   "vim.visualstar": true,
   "window.customMenuBarAltFocus": false,
   "window.enableMenuBarMnemonics": false,
-  "workbench.colorTheme": "Night Owl (No Italics)",
+  "workbench.colorTheme": "SynthWave '84",
   "workbench.commandPalette.history": 100,
   "workbench.editor.closeOnFileDelete": true,
   "workbench.iconTheme": "material-icon-theme",
