FIX: Selection colors for themes in Kitty config

--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -1197,8 +1197,8 @@ map ctrl+0 change_font_size all 0
 
 # foreground            #3c3836
 # background            #f9f5d7
-# selection_foreground  #3c3836
-# selection_background  #f9f5d7
+# selection_foreground  #f9f5d7
+# selection_background  #3c3836
 
 # # black
 # color0   #fbf1c7
@@ -1234,78 +1234,78 @@ map ctrl+0 change_font_size all 0
 
 # Oceanic Next theme ----------------------------------------------------------
 
-# foreground            #d8dee9
-# background            #1b2b34
-# selection_foreground  #d8dee9
-# selection_background  #1b2b34
+foreground            #d8dee9
+background            #1b2b34
+selection_foreground  #1b2b34
+selection_background  #d8dee9
 
-# # black
-# color0   #29414f
-# color8   #405860
+# black
+color0   #29414f
+color8   #405860
 
-# # red
-# color1   #ec5f67
-# color9   #ec5f67
+# red
+color1   #ec5f67
+color9   #ec5f67
 
-# # green
-# color2   #99c794
-# color10  #99c794
+# green
+color2   #99c794
+color10  #99c794
 
-# # yellow
-# color3   #fac863
-# color11  #fac863
+# yellow
+color3   #fac863
+color11  #fac863
 
-# # blue
-# color4  #6699cc
-# color12 #6699cc
+# blue
+color4  #6699cc
+color12 #6699cc
 
-# # magenta
-# color5   #c594c5
-# color13  #c594c5
+# magenta
+color5   #c594c5
+color13  #c594c5
 
-# # cyan
-# color6   #5fb3b3
-# color14  #5fb3b3
+# cyan
+color6   #5fb3b3
+color14  #5fb3b3
 
-# # white
-# color7   #65737e
-# color15  #adb5c0
+# white
+color7   #65737e
+color15  #adb5c0
 
 # Solarflare (base 16) theme --------------------------------------------------
 
-foreground            #a6afb8
-background            #18262f
-selection_foreground  #a6afb8
-selection_background  #18262f
+# foreground            #a6afb8
+# background            #18262f
+# selection_foreground  #18262f
+# selection_background  #a6afb8
 
-# black
-color0   #18262f
-color8   #667581
+# # black
+# color0   #18262f
+# color8   #667581
 
-# red
-color1   #ef5253
-color9   #ef5253
+# # red
+# color1   #ef5253
+# color9   #ef5253
 
-# green
-color2   #7cc844
-color10  #7cc844
+# # green
+# color2   #7cc844
+# color10  #7cc844
 
-# yellow
-color3   #e4b51c
-color11  #e4b51c
+# # yellow
+# color3   #e4b51c
+# color11  #e4b51c
 
-# blue
-color4   #33b5e1
-color12  #33b5e1
+# # blue
+# color4   #33b5e1
+# color12  #33b5e1
 
-# magenta
-color5   #a363d5
-color13  #a363d5
+# # magenta
+# color5   #a363d5
+# color13  #a363d5
 
-# cyan
-color6   #52cbb0
-color14  #52cbb0
+# # cyan
+# color6   #52cbb0
+# color14  #52cbb0
 
-# white
-color7   #a6afb8
-color15  #f5f7fa
+# # white
+# color7   #a6afb8
+# color15  #f5f7fa
