--- a/files/.config/nvim/coc-settings.json
+++ b/files/.config/nvim/coc-settings.json
@@ -1,12 +1,21 @@
 {
-    "python.pythonPath": "~/.venvs/general/neovim/bin/python",
-    "python.formatting.provider": "black",
-    "python.formatting.blackPath": "~/.venvs/general/neovim/bin/black",
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true,
-    "python.linting.pylintPath": "~/.venvs/general/neovim/bin/pylint",
-    "solargraph.bundlerPath": "/home/antonhub/.rvm/rubies/ruby-2.7.2/bin/bundler",
-    "solargraph.diagnostics": true,
-    "solargraph.formatting": true,
-    "snippets.userSnippetsDirectory": "~/.config/nvim/my_snippets"
+  "python.pythonPath": "~/.venvs/general/neovim/bin/python",
+  "python.formatting.provider": "black",
+  "python.formatting.blackPath": "~/.venvs/general/neovim/bin/black",
+  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": true,
+  "python.linting.pylintPath": "~/.venvs/general/neovim/bin/pylint",
+  "solargraph.bundlerPath": "/home/antonhub/.rvm/rubies/ruby-2.7.2/bin/bundler",
+  /* "solargraph.diagnostics": true, */
+  "solargraph.formatting": true,
+  "snippets.userSnippetsDirectory": "~/.config/nvim/my_snippets",
+  "coc.preferences.formatOnSaveFiletypes": [
+    "javascript",
+    "vue",
+    "html",
+    "json",
+    "jsonc",
+    "python"
+  ],
+  "eslint.autoFixOnSave": true
 }
