Font changed and color themes added in Kitty config file

--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrains Mono Regular Nerd Font Complete
-bold_font        JetBrains Mono Bold Nerd Font Complete
-italic_font      JetBrains Mono Italic Nerd Font Complete
-bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete
+font_family      JetBrains Mono Regular
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -1234,42 +1234,42 @@ map ctrl+0 change_font_size all 0
 
 # Oceanic Next theme ----------------------------------------------------------
 
-foreground            #d8dee9
-background            #1b2b34
-selection_foreground  #1b2b34
-selection_background  #d8dee9
+# foreground            #d8dee9
+# background            #1b2b34
+# selection_foreground  #1b2b34
+# selection_background  #d8dee9
 
-# black
-color0   #29414f
-color8   #405860
+# # black
+# color0   #29414f
+# color8   #405860
 
-# red
-color1   #ec5f67
-color9   #ec5f67
+# # red
+# color1   #ec5f67
+# color9   #ec5f67
 
-# green
-color2   #99c794
-color10  #99c794
+# # green
+# color2   #99c794
+# color10  #99c794
 
-# yellow
-color3   #fac863
-color11  #fac863
+# # yellow
+# color3   #fac863
+# color11  #fac863
 
-# blue
-color4  #6699cc
-color12 #6699cc
+# # blue
+# color4  #6699cc
+# color12 #6699cc
 
-# magenta
-color5   #c594c5
-color13  #c594c5
+# # magenta
+# color5   #c594c5
+# color13  #c594c5
 
-# cyan
-color6   #5fb3b3
-color14  #5fb3b3
+# # cyan
+# color6   #5fb3b3
+# color14  #5fb3b3
 
-# white
-color7   #65737e
-color15  #adb5c0
+# # white
+# color7   #65737e
+# color15  #adb5c0
 
 # Solarflare (base 16) theme --------------------------------------------------
 
@@ -1309,3 +1309,116 @@ color15  #adb5c0
 # # white
 # color7   #a6afb8
 # color15  #f5f7fa
+
+# One dark theme --------------------------------------------------------------
+
+# foreground            #abb2bf
+# background            #282c34
+# selection_foreground  #282c34
+# selection_background  #abb2bf
+
+# # black
+# color0   #282c34
+# color8   #5c6370
+
+# # red
+# color1   #e06c75
+# color9   #e06c75
+
+# # green
+# color2   #98c379
+# color10  #98c379
+
+# # yellow
+# color3   #d19a66
+# color11  #d19a66
+
+# # blue
+# color4   #61afef
+# color12  #61afef
+
+# # magenta
+# color5   #c678dd
+# color13  #c678dd
+
+# # cyan
+# color6   #56b6c2
+# color14  #56b6c2
+
+# # white
+# color7   #abb2bf
+# color15  #ffffff
+
+# One light theme -------------------------------------------------------------
+
+# foreground            #282c34
+# background            #ffffff
+# selection_foreground  #ffffff
+# selection_background  #282c34
+
+# # black
+# color0   #282c34
+# color8   #5c6370
+
+# # red
+# color1   #e06c75
+# color9   #e06c75
+
+# # green
+# color2   #98c379
+# color10  #98c379
+
+# # yellow
+# color3   #d19a66
+# color11  #d19a66
+
+# # blue
+# color4   #61afef
+# color12  #61afef
+
+# # magenta
+# color5   #c678dd
+# color13  #c678dd
+
+# # cyan
+# color6   #56b6c2
+# color14  #56b6c2
+
+# # white
+# color7   #abb2bf
+# color15  #ffffff
+
+# Base16 Material Palenight ---------------------------------------------------
+background #292d3e
+foreground #959dcb
+selection_background #959dcb
+selection_foreground #292d3e
+url_color #8796b0
+cursor #959dcb
+active_border_color #676e95
+inactive_border_color #444267
+active_tab_background #292d3e
+active_tab_foreground #959dcb
+inactive_tab_background #444267
+inactive_tab_foreground #8796b0
+tab_bar_background #444267
+
+# normal
+color0 #292d3e
+color1 #f07178
+color2 #c3e88d
+color3 #ffcb6b
+color4 #82aaff
+color5 #c792ea
+color6 #89ddff
+color7 #959dcb
+
+# bright
+color8 #676e95
+color9 #f78c6c
+color10 #444267
+color11 #32374d
+color12 #8796b0
+color13 #959dcb
+color14 #ff5370
+color15 #ffffff
