--- a/files/.config/nvim/coc-settings.json
+++ b/files/.config/nvim/coc-settings.json
@@ -1,22 +1,28 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": [
-    "javascript",
-    "vue",
-    "html",
-    "json",
-    "jsonc",
-    "python"
-  ],
-  "eslint.autoFixOnSave": true,
+  /* "coc.preferences.formatOnSaveFiletypes": [ */
+  /*   "javascript", */
+  /*   "vue", */
+  /*   "html", */
+  /*   "json", */
+  /*   "jsonc", */
+  /*   "python" */
+  /* ], */
+  "eslint.autoFixOnSave": false,
+
   "python.formatting.blackPath": "~/.venvs/general/neovim/bin/black",
   "python.formatting.provider": "black",
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": true,
   "python.linting.pylintPath": "~/.venvs/general/neovim/bin/pylint",
   "python.pythonPath": "~/.venvs/general/neovim/bin/python",
+
   "snippets.userSnippetsDirectory": "~/.config/nvim/my_snippets",
-  "solargraph.bundlerPath": "/home/antonhub/.rvm/rubies/ruby-2.7.2/bin/bundler",
+
+  "solargraph.formatting": false,
+  "solargraph.autoformat": false,
   /* "solargraph.diagnostics": true, */
-  "solargraph.formatting": true,
+  /* "solargraph.useBundler": true, */
+  "solargraph.promptDownload": false,
+
   "vetur.ignoreProjectWarning": true
 }
