--- a/files/.config/Code/User/settings.json
+++ b/files/.config/Code/User/settings.json
@@ -24,28 +24,29 @@
     "editor.codeActionsOnSave": { "source.fixAll.eslint": true },
     "editor.tabSize": 2
   },
+  "breadcrumbs.enabled": false,
   "breadcrumbs.symbolPath": "off",
   "css.lint.duplicateProperties": "warning",
   "css.lint.important": "warning",
   "debug.console.wordWrap": false,
   "debug.inlineValues": true,
+  "diffEditor.ignoreTrimWhitespace": false,
   "editor.autoClosingBrackets": "always",
   "editor.autoClosingOvertype": "always",
   "editor.autoClosingQuotes": "always",
   "editor.dragAndDrop": false,
   "editor.emptySelectionClipboard": false,
-  "editor.fontFamily": "'JetBrainsMono Nerd Font'",
+  "editor.fontFamily": "'JetBrains Mono'",
   "editor.fontLigatures": true,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
-  "editor.lineNumbers": "relative",
+  "editor.lineNumbers": "on",
   "editor.linkedEditing": true,
   "editor.minimap.enabled": false,
   "editor.quickSuggestions": true,
   "editor.renderLineHighlight": "none",
   "editor.renderWhitespace": "none",
   "editor.rulers": [80],
-  "editor.semanticHighlighting.enabled": false,
   "editor.suggestSelection": "recentlyUsedByPrefix",
   "editor.tabCompletion": "on",
   "editor.wordBasedSuggestionsMode": "allDocuments",
@@ -60,8 +61,10 @@
   "files.watcherExclude": {
     "**/.git/objects/**": true,
     "**/.git/subtree-cache/**": true,
-    "**/node_modules/**": true,
     "**/.hg/store/**": true,
+    "**/build/**": true,
+    "**/dist/**": true,
+    "**/node_modules/**": true,
     "**/venv/**": true
   },
   "git.untrackedChanges": "separate",
@@ -70,16 +73,22 @@
   "less.lint.important": "warning",
   "liveServer.settings.donotShowInfoMsg": true,
   "liveshare.authenticationProvider": "GitHub",
+  "liveshare.presence": false,
   "markdown.links.openLocation": "beside",
   "material-icon-theme.showWelcomeMessage": false,
   "problems.showCurrentInStatus": true,
   "ruby.codeCompletion": "rcodetools",
   "ruby.intellisense": "rubyLocate",
-  "ruby.useBundler": true,
   "ruby.useLanguageServer": true,
   "scss.lint.duplicateProperties": "warning",
   "scss.lint.important": "warning",
-  "search.exclude": { "**/venv": true, "**/node_modules/**": true },
+  "search.exclude": {
+    "**/build/**": true,
+    "**/dist/**": true,
+    "**/node_modules/**": true,
+    "**/package-lock.json": true,
+    "**/venv": true
+  },
   "search.showLineNumbers": true,
   "search.smartCase": true,
   "search.useIgnoreFiles": false,
@@ -91,6 +100,9 @@
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.rendererType": "canvas",
   "terminal.integrated.showExitAlert": false,
+  "timeline.excludeSources": [],
+  "vetur.ignoreProjectWarning": true,
+  "vim.easymotion": true,
   "vim.highlightedyank.duration": 500,
   "vim.highlightedyank.enable": true,
   "vim.hlsearch": true,
@@ -112,7 +124,7 @@
       "commands": ["workbench.action.toggleSidebarVisibility"]
     },
     { "before": ["Y"], "after": ["y", "$"] },
-    { "before": ["<leader>", "<leader>"], "commands": [":noh"] },
+    { "before": ["<leader>", "n"], "commands": [":noh"] },
     { "before": ["<c-h>"], "after": ["<c-w>", "h"] },
     { "before": ["<c-l>"], "after": ["<c-w>", "l"] },
     { "before": ["<c-j>"], "after": ["<c-w>", "j"] },
@@ -122,9 +134,9 @@
   "vim.visualstar": true,
   "window.customMenuBarAltFocus": false,
   "window.enableMenuBarMnemonics": false,
-  "workbench.colorTheme": "SynthWave '84",
   "workbench.commandPalette.history": 100,
   "workbench.editor.closeOnFileDelete": true,
+  "workbench.editor.splitOnDragAndDrop": false,
   "workbench.iconTheme": "material-icon-theme",
   "workbench.panel.opensMaximized": "always",
   "workbench.startupEditor": "none",
@@ -132,9 +144,27 @@
   "workbench.tree.renderIndentGuides": "always",
   "workbench.view.alwaysShowHeaderActions": true,
   "zenMode.centerLayout": false,
-  "zenMode.hideLineNumbers": false,
   "zenMode.hideStatusBar": false,
   "zenMode.hideTabs": false,
   "zenMode.restore": false,
-  "diffEditor.ignoreTrimWhitespace": false
+  "window.menuBarVisibility": "hidden",
+  "workbench.editorAssociations": {
+    "*.ipynb": "jupyter.notebook.ipynb"
+  },
+  // "bracket-pair-colorizer-2.colors": [
+  //   // For white themes
+  //   "#AA0078",
+  //   "#FF6600",
+  //   "#0030FF"
+  // ],
+  "editor.highlightActiveIndentGuide": false,
+  "editor.semanticHighlighting.enabled": true,
+  "workbench.colorTheme": "Nord",
+  "editor.cursorStyle": "line",
+  "editor.insertSpaces": false,
+  "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
+  "editor.wordWrap": "off",
+  "vim.smartRelativeLine": true,
+  "gitlens.currentLine.enabled": false,
+  "security.workspace.trust.untrustedFiles": "open"
 }
