--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -57,12 +57,12 @@ bind l select-pane -R
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'egel/tmux-gruvbox'
-# set -g @plugin 'arcticicestudio/nord-tmux'
-set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'arcticicestudio/nord-tmux'
+# set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # tmux-thempack condif
-set -g @themepack 'powerline/block/cyan'
+# set -g @themepack 'powerline/block/cyan'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
