--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -1394,36 +1394,86 @@ map ctrl+0 change_font_size all 0
 # color15  #ffffff
 
 # Base16 Material Palenight ---------------------------------------------------
-background #292d3e
-foreground #959dcb
-selection_background #959dcb
-selection_foreground #292d3e
-url_color #8796b0
-cursor #959dcb
-active_border_color #676e95
-inactive_border_color #444267
-active_tab_background #292d3e
-active_tab_foreground #959dcb
-inactive_tab_background #444267
-inactive_tab_foreground #8796b0
-tab_bar_background #444267
+# background #292d3e
+# foreground #959dcb
+# selection_background #959dcb
+# selection_foreground #292d3e
+# url_color #8796b0
+# cursor #959dcb
+# active_border_color #676e95
+# inactive_border_color #444267
+# active_tab_background #292d3e
+# active_tab_foreground #959dcb
+# inactive_tab_background #444267
+# inactive_tab_foreground #8796b0
+# tab_bar_background #444267
+#
+# # normal
+# color0 #292d3e
+# color1 #f07178
+# color2 #c3e88d
+# color3 #ffcb6b
+# color4 #82aaff
+# color5 #c792ea
+# color6 #89ddff
+# color7 #959dcb
+#
+# # bright
+# color8 #676e95
+# color9 #f78c6c
+# color10 #444267
+# color11 #32374d
+# color12 #8796b0
+# color13 #959dcb
+# color14 #ff5370
+# color15 #ffffff
+
+# tokyonight ---------------------------------------------------
+
+## name: Tokyo Night Storm
+## license: MIT
+## author: Folke Lemaitre
+## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_storm.conf
+
+background #24283b
+foreground #c0caf5
+selection_background #364a82
+selection_foreground #c0caf5
+url_color #73daca
+cursor #c0caf5
+cursor_text_color #24283b
+
+# Tabs
+active_tab_background #7aa2f7
+active_tab_foreground #1f2335
+inactive_tab_background #292e42
+inactive_tab_foreground #545c7e
+#tab_bar_background #1d202f
+
+# Windows
+active_border_color #7aa2f7
+inactive_border_color #292e42
 
 # normal
-color0 #292d3e
-color1 #f07178
-color2 #c3e88d
-color3 #ffcb6b
-color4 #82aaff
-color5 #c792ea
-color6 #89ddff
-color7 #959dcb
+color0 #1d202f
+color1 #f7768e
+color2 #9ece6a
+color3 #e0af68
+color4 #7aa2f7
+color5 #bb9af7
+color6 #7dcfff
+color7 #a9b1d6
 
 # bright
-color8 #676e95
-color9 #f78c6c
-color10 #444267
-color11 #32374d
-color12 #8796b0
-color13 #959dcb
-color14 #ff5370
-color15 #ffffff
+color8 #414868
+color9 #f7768e
+color10 #9ece6a
+color11 #e0af68
+color12 #7aa2f7
+color13 #bb9af7
+color14 #7dcfff
+color15 #c0caf5
+
+# extended colors
+color16 #ff9e64
+color17 #db4b4b
