--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -2,7 +2,7 @@
 set -g default-terminal "tmux-256color"
 
 # If my terminal supports 24-bit color ("xterm-kitty" it the value of $TERM outside Tmux)
-set -ga terminal-overrides ",xterm-kitty:Tc"
+# set -ga terminal-overrides ",xterm-kitty:Tc"
 
 # Move with VIM keybindings in copy mode
 set-window-option -g mode-keys vi
@@ -21,6 +21,8 @@ set -g status-interval 5
 
 # Don't allow tmux to rename the window based on the content
 set-window-option -g allow-rename off
+
+set-option -g focus-events on
 
 # Move around panes with prefix + hjkl (vim style)
 bind h select-pane -L
@@ -51,13 +53,47 @@ bind l select-pane -R
 # set -g window-status-current-format "#[fg=colour0]#[bg=colour51] #I*:#[fg=colour0]#W "
 # set -g window-status-format "#[fg=colour51]#[bg=colour0] #I:#[fg=colour51]#W "
 
+# Tokyonight theme
+
+set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+
+set -g message-style "fg=#7aa2f7,bg=#3b4261"
+set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+
+set -g pane-border-style "fg=#3b4261"
+set -g pane-active-border-style "fg=#7aa2f7"
+
+set -g status "on"
+set -g status-justify "left"
+
+set -g status-style "fg=#7aa2f7,bg=#1f2335"
+
+set -g status-left-length "100"
+set -g status-right-length "100"
+
+set -g status-left-style NONE
+set -g status-right-style NONE
+
+set -g status-left "#[fg=#1d202f,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1d202f,bg=#7aa2f7,bold] #h "
+
+setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
+setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
+
+# tmux-plugins/tmux-prefix-highlight support
+set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#1f2335]#[fg=#1f2335]#[bg=#e0af68]"
+set -g @prefix_highlight_output_suffix ""
+
 
 # TPM (Tmux Plugin manager) ---------------------------------------------------
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'egel/tmux-gruvbox'
-set -g @plugin 'arcticicestudio/nord-tmux'
+# set -g @plugin 'arcticicestudio/nord-tmux'
 # set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
