--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -11,10 +11,10 @@
 # italic_font      JetBrains Mono Italic
 # bold_italic_font JetBrains Mono Bold Italic
 
-font_family      JetBrains Mono Regular Nerd Font Complete
-bold_font        JetBrains Mono Bold Nerd Font Complete
-italic_font      JetBrains Mono Italic Nerd Font Complete
-bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete
+font_family      JetBrainsMono NF Regular
+bold_font        JetBrainsMono NF Bold
+italic_font      JetBrainsMono NF Italic
+bold_italic_font JetBrainsMono NF Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
