tmux config updated: terminal-overrides -> terminal-features

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -2,7 +2,8 @@
 set -g default-terminal "tmux-256color"
 
 # If my terminal supports 24-bit color ("xterm-kitty" it the value of $TERM outside Tmux)
-# set -ga terminal-overrides ",xterm-kitty:Tc"
+# set -ga terminal-overrides ",xterm-kitty:Tc" # old
+set -as terminal-features ",xterm-kitty:RGB" # new
 
 # Move with VIM keybindings in copy mode
 set-window-option -g mode-keys vi
