--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,64 +31,6 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-#Color theme:
-
-# # Colors for message/command mode in the status bar
-# set -g message-style bg=colour51,fg=colour0
-# set -g message-command-style bg=colour51,fg=colour0
-
-# # Set color for modes
-# setw -g mode-style 'bg=colour51 fg=colour0'
-
-# # Make active pane border blue
-# set -g pane-active-border-style 'bg=colour0 fg=colour51'
-
-# # Set the left and right status
-# set -g status-left '#[bg=colour0]#[fg=colour51]#{?client_prefix,#[bg=colour51]#[fg=colour0],} #S #[bg=colour0]#[fg=colour51]#{?client_prefix,#[bg=colour51]#[fg=colour0],}'
-# set -g status-right '#[bg=colour0]#[fg=colour51] %b %d %H:%M '
-
-# # Set the background color
-# set -g status-bg 'colour0'
-
-# # Customize how windows are displayed in the status line
-# set -g window-status-current-format "#[fg=colour0]#[bg=colour51] #I*:#[fg=colour0]#W "
-# set -g window-status-format "#[fg=colour51]#[bg=colour0] #I:#[fg=colour51]#W "
-
-# Tokyonight theme
-
-set -g mode-style "fg=#7aa2f7,bg=#3b4261"
-
-set -g message-style "fg=#7aa2f7,bg=#3b4261"
-set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
-
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
-
-set -g status "on"
-set -g status-justify "left"
-
-set -g status-style "fg=#7aa2f7,bg=#1f2335"
-
-set -g status-left-length "100"
-set -g status-right-length "100"
-
-set -g status-left-style NONE
-set -g status-right-style NONE
-
-set -g status-left "#[fg=#1d202f,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1d202f,bg=#7aa2f7,bold] #h "
-
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
-setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
-
-# tmux-plugins/tmux-prefix-highlight support
-set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#1f2335]#[fg=#1f2335]#[bg=#e0af68]"
-set -g @prefix_highlight_output_suffix ""
-
-
 # TPM (Tmux Plugin manager) ---------------------------------------------------
 
 # List of plugins
@@ -97,6 +39,7 @@ set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'arcticicestudio/nord-tmux'
 # set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
 # tmux-thempack condif
 # set -g @themepack 'powerline/block/cyan'
