tmux: plugins reorganized

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,16 +33,14 @@ bind l select-pane -R
 
 # TPM (Tmux Plugin manager) ---------------------------------------------------
 
-# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'sainnhe/tmux-fzf'
+
+# Themes
 # set -g @plugin 'egel/tmux-gruvbox'
 # set -g @plugin 'arcticicestudio/nord-tmux'
-# set -g @plugin 'jimeh/tmux-themepack'
-set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
-
-# tmux-thempack condif
-# set -g @themepack 'powerline/block/cyan'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
