--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,10 +11,20 @@
 # italic_font      JetBrains Mono Italic
 # bold_italic_font JetBrains Mono Bold Italic
 
-font_family      JetBrainsMono NF Regular
-bold_font        JetBrainsMono NF Bold
-italic_font      JetBrainsMono NF Italic
-bold_italic_font JetBrainsMono NF Bold Italic
+# font_family      JetBrainsMono NF Regular
+# bold_font        JetBrainsMono NF Bold
+# italic_font      JetBrainsMono NF Italic
+# bold_italic_font JetBrainsMono NF Bold Italic
+
+# font_family      CaskaydiaCove NF Regular
+# bold_font        CaskaydiaCove NF Bold
+# italic_font      CaskaydiaCove NF Italic
+# bold_italic_font CaskaydiaCove NF Bold Italic
+
+font_family      FiraCode Nerd Font Regular
+bold_font        FiraCode Nerd Font Bold
+italic_font      FiraCode Nerd Font Italic
+bold_italic_font FiraCode NerdFont Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
