--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,7 +41,8 @@ set -g @plugin 'sainnhe/tmux-fzf'
 # Themes
 # set -g @plugin 'egel/tmux-gruvbox'
 # set -g @plugin 'arcticicestudio/nord-tmux'
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
+# set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @plugin 'catppuccin/tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
