tmux: binding (prefix + <c-l>) to use fzf for sessions

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,6 +26,8 @@ set-window-option -g allow-rename off
 
 set-option -g focus-events on
 
+bind-key "C-l" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh switch"
+
 # Move around panes with prefix + hjkl (vim style)
 bind h select-pane -L
 bind j select-pane -D
