tmux: "tmux-power" and "minimal-tmux-status" themes added

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,7 +44,15 @@ set -g @plugin 'sainnhe/tmux-fzf'
 # set -g @plugin 'egel/tmux-gruvbox'
 # set -g @plugin 'arcticicestudio/nord-tmux'
 # set -g @plugin 'fabioluciano/tmux-tokyo-night'
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux'
+
+# set -g @plugin 'wfxr/tmux-power'
+# set -g @tmux_power_theme '#b4bdc3'
+
+set -g @plugin 'niksingh710/minimal-tmux-status'
+set -g @minimal-tmux-justify "left"
+set -g @minimal-tmux-bg "#b4bdc3"
+set -g @minimal-tmux-status "bottom"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
