--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,7 +26,8 @@ set-window-option -g allow-rename off
 
 set-option -g focus-events on
 
-bind-key "C-l" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh switch"
+bind-key "C-s" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh switch"
+bind-key "C-w" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
 
 # Move around panes with prefix + hjkl (vim style)
 bind h select-pane -L
