tmux: scape time to 10

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,7 +16,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 set -g mouse on
 
 # Helps in faster key repetition
-set -sg escape-time 0
+set -s escape-time 10
 
 # Refresh status line every 5 seconds - Good for when music is playing / update time etc
 set -g status-interval 5
