tmux: ghostty terminal features

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,8 @@ set -g default-terminal "tmux-256color"
 # If my terminal supports 24-bit color ("xterm-kitty" it the value of $TERM outside Tmux)
 # set -ga terminal-overrides ",xterm-kitty:Tc" # old
 # set -as terminal-features ",xterm-kitty:RGB" # new
-set -as terminal-features ",xterm-256color:RGB" # new
+# set -as terminal-features ",xterm-256color:RGB" # new
+set -as terminal-features ",xterm-ghostty:RGB" # new
 
 # Move with VIM keybindings in copy mode
 set-window-option -g mode-keys vi
